# family-control-panel

./: .env.example  .gitignore  00-getting-started.md  CLAUDE.md  Makefile  docker-compose.yml
.github/workflows/: build.yml  ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260509_0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: assignments.py  auth.py  children.py  config.py  instances.py  kiosk.py  moments.py  tasks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  assignment.py  child.py  kiosk_config.py  kiosk_pin.py  moment.py  parent.py  task.py  task_instance.py  validation.py
backend/app/schemas/: assignment.py  auth.py  child.py  config.py  instance.py  kiosk.py  moment.py  pin.py  task.py
backend/app/scripts/: seed_dev.py
backend/app/services/: instances.py  pins.py  saint.py  weather.py
backend/tests/: test_assignments.py  test_auth.py  test_children.py  test_config.py  test_declare_validate.py  test_health.py  test_instances.py  test_kiosk.py  test_moments.py  test_pins.py  test_saint.py  test_tasks.py
docs/: 00-contexte-et-roadmap.md  01-prd.md  02-personnas.md  03-user-stories.md  04a-scenario-key-path.md  05-user-flows.md  06-data-model.md  06b-sitemap.md  07-breadboards.md  08-fat-marker-sketches.md  09a-specs-composants-atomiques.md  09b-specs-composants-composites.md  09c-specs-vues.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  (+2 more)
(+26 files in other folders)
