[project]
name = "family-control-panel-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "black>=24",
    "ruff>=0.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "types-python-jose>=3.3",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
